[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/Sprites/game-name2.png" type="Texture" id=1]
[ext_resource path="res://Levels/Sprites/resume-normal.png" type="Texture" id=2]
[ext_resource path="res://Levels/Sprites/resume-hover.png" type="Texture" id=3]
[ext_resource path="res://Levels/Sprites/quit-normal.png" type="Texture" id=4]
[ext_resource path="res://Levels/Sprites/quit-hover.png" type="Texture" id=5]
[ext_resource path="res://Levels/Sprites/sound-on-hover.png" type="Texture" id=6]
[ext_resource path="res://Levels/Sprites/sound-on-normal.png" type="Texture" id=7]
[ext_resource path="res://PauseMenu.gd" type="Script" id=8]
[ext_resource path="res://Levels/TitleScreen/select.wav" type="AudioStream" id=9]

[sub_resource type="AnimatedTexture" id=1]
frames = 2
fps = 15.0
frame_0/texture = ExtResource( 2 )
frame_0/delay_sec = 2.0
frame_1/texture = ExtResource( 1 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=2]
frames = 3
fps = 20.0
frame_0/texture = ExtResource( 3 )
frame_0/delay_sec = 3.0
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
frames = 2
fps = 15.0
frame_0/texture = ExtResource( 4 )
frame_0/delay_sec = 3.5
frame_1/texture = ExtResource( 1 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=4]
frames = 2
fps = 15.0
frame_0/texture = ExtResource( 5 )
frame_0/delay_sec = 4.0
frame_1/texture = ExtResource( 1 )
frame_1/delay_sec = 0.0

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.223529, 0.254902, 0.309804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 390.0
margin_right = 890.0
margin_bottom = 720.0
size_flags_horizontal = 4
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 500.0
margin_bottom = 324.0
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 500.0
margin_bottom = 448.0
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 500.0
margin_bottom = 516.0
alignment = 1

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 282.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="ChangeFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 2.0
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
